@@ -919,7 +919,7 @@ class CoursePress_Data_Shortcode_Course {
 				break;
 
 			case 'prerequisite':
-				$prereq = CoursePress_Data_Course::get_setting( $course_id, 'enrollment_prerequisite', array() );
+				$prereq = CoursePress_Data_Course::get_prerequisites( $course_id );
 				$prereq_courses = array();
 				foreach ( $prereq as $prereq_id ) {
 					$prereq_courses[] = sprintf(
