@@ -18,6 +18,8 @@ CHANGELOG
 * FIxed on signup form double error messages.
 * Added check is safe_mode before call set_time_limit() function.
 * Added the action "coursepress_woocommerce_product_updated". This action has two variable $product_id and $course_id and is called after update product by CoursePress.
+* Fixed a bug with prerequisites courses when we have only one prerequisite course.
+* Improve select2 field for prerequisites and remove current course from the list.
 
 = 2.0.4 =
 -------------------------------------------------
